[package]
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
description = "A Rust port of LAS2 from SVDLIBC"
keywords = ["svd"]
categories = ["algorithms", "data-structures", "mathematics", "science"]
name = "svdlibrs"
license-file = "SVDLIBC-LICENSE.txt"
version = "0.4.3"
repository = "https://github.com/dfarnham/svdlibrs"
readme = "README.md"
edition = "2021"

[dependencies]
nalgebra-sparse = "0.8.0"
ndarray = "0.15.6"
rand = "0.8.5"
thiserror = "1.0.37"
